Rename to test-nolibc

--- a/Kconfig
+++ b/Kconfig
@@ -5,8 +5,8 @@
 # the BSD 2-Clause license. Note that NO WARRANTY is provided.
 # See "LICENSE_BSD2.txt" for details.
 
-menuconfig APP_TEST_NEWLIBS
-    bool "test-newlibs"
+menuconfig APP_TEST_NOLIBC
+    bool "test-nolibc"
     default n
     select LIB_SEL4
     select LIB_SEL4_PRINTF
@@ -15,5 +15,5 @@ menuconfig APP_TEST_NEWLIBS
     select LIB_SEL4_BENCHMARK
     select LIB_SEL4_STARTSTOP
     help
-        Test new libs
+        Test the new libs with no libc dependency
 
