Add more tests.
Add seL4_Printf's and use seL4_StrNCmp and seL4_Writer to test one of
the seL4_Printf's, looks like its working so add more later.

--- a/Kconfig
+++ b/Kconfig
@@ -9,6 +9,7 @@ menuconfig APP_TEST_NOLIBC
     bool "test-nolibc"
     default n
     select LIB_SEL4
+    select LIB_SEL4_STRING
     select LIB_SEL4_PRINTF
     select LIB_SEL4_PUTCHAR
     select LIB_SEL4_ASSERT
